# simple-archiver

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  codecov.yml  components.json  index.html  knip.json  mise.ci-hygiene.toml  mise.toml  package.json  pnpm-lock.yaml  renovate.json  vite.config.ts  vitest.config.ts
.claude/: conventions.md  domain-model.md
.config/: nextest.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs
crates/core/src/application/: compress_context.rs  eta_estimator.rs  extract_context.rs  format_registry.rs  loom_nucleus.rs  mod.rs  ports.rs  progress.rs  progress_aggregator.rs  run_archive_job.rs
crates/core/src/domain/: archive_format.rs  archive_job.rs  archive_task.rs  conflict_policy.rs  file_name.rs  mod.rs  naming_rule.rs  output_directory.rs  output_mode.rs  sequence_number.rs  source_item.rs  task_progress.rs  task_status.rs  template.lalrpop
crates/core/src/domain/naming_rule/: template_parse.rs
crates/core/src/infrastructure/: archive_extractor.rs  fs_placer.rs  mod.rs  path_utils.rs  system_clock.rs  temp_workspace.rs  unrar_extractor.rs  zip_archiver.rs  zip_extractor.rs
crates/core/tests/: rar_pipeline_smoke.rs  unrar_extractor_smoke.rs  zip_archiver_smoke.rs  zip_pipeline_smoke.rs
crates/core/tests/fixtures/: sample.rar
docs/: architecture.md  development.md
docs/images/: README.md  diagram.py
scripts/macos/: generate-self-signed-cert.sh  test-verify-macos-bundles.sh  verify-macos-bundles.sh
site/: .oxfmtrc.json  .oxlintrc.json  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
site/src/: App.test.tsx  App.tsx  config.ts  main.tsx
site/src/components/: Footer.tsx  Header.tsx  Hero.tsx  Install.tsx  Overview.tsx  UsageMovie.tsx
site/src/hooks/: useScrollHeader.ts
site/src/styles/: index.css  typography.test.ts
src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/presentation/: commands.rs  dto.rs  dto_map.rs  events.rs  mod.rs  state.rs
src-tauri/tests/: capabilities_open_path_scope.rs  compress_folder_command.rs  folder_extract.rs  run_job_command.rs
src/__tests__/: smoke.test.ts  summary-flow.test.tsx  token-only.test.ts
src/bindings/: ConflictPolicy.ts  DraftItemDto.ts  DraftSnapshot.ts  FailedTaskDto.ts  JobSummaryDto.ts  OutputMode.ts  ProgressCounts.ts  ProgressEvent.ts  SourceKind.ts  TaskProgressDto.ts  TaskResultDto.ts  TaskStatusDto.ts
src/components/: AddSourceButtons.test.tsx  AddSourceButtons.tsx  AppHeader.test.tsx  AppHeader.tsx  AppShell.test.tsx  AppShell.tsx  ColumnResizeHandle.tsx  ConflictPolicySelect.test.tsx  ConflictPolicySelect.tsx  DropOverlay.test.tsx  DropOverlay.tsx  EmptyQueue.test.tsx  EmptyQueue.tsx  FileDropZone.test.tsx  FileDropZone.tsx  LastBatchChip.test.tsx  LastBatchChip.tsx  Ledger.test.tsx  Ledger.tsx  LeftRail.test.tsx  LeftRail.tsx  NamingRuleForm.test.tsx  NamingRuleForm.tsx  OutputDirPicker.test.tsx  OutputDirPicker.tsx  OutputModeToggle.test.tsx  OutputModeToggle.tsx  OutputSettings.test.tsx  OutputSettings.tsx  OverallProgress.test.tsx  OverallProgress.tsx  PaneSeparator.test.tsx  PaneSeparator.tsx  ResetButton.test.tsx  ResetButton.tsx  ResultPreview.test.tsx  ResultPreview.tsx  RightCanvas.test.tsx  RightCanvas.tsx  RunControls.test.tsx  (+28 more)
src/components/ui/: button.test.tsx  button.tsx  confirm-dialog.test.tsx  confirm-dialog.tsx  input.tsx  label.tsx
src/hooks/: useChooseOutputDir.ts  useColumnResize.test.ts  useColumnResize.ts  useFileDrop.test.tsx  useFileDrop.ts  usePaneResize.test.ts  usePaneResize.ts  useQueueReorderKeys.test.ts  useQueueReorderKeys.ts  useQueueSelectionKeys.ts
src/lib/: archive.test.ts  archive.ts  canvas-phase.test.ts  canvas-phase.ts  dialog.test.ts  dialog.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  naming.test.ts  naming.ts  output-dir-default.test.ts  output-dir-default.ts  path.test.ts  path.ts  queue-move.test.ts  queue-move.ts  rail-width.test.ts  rail-width.ts  readiness.test.ts  readiness.ts  reveal.test.ts  reveal.ts  status.test.ts  status.ts  wording.test.ts  wording.ts
src/store/: jobStore.test.ts  jobStore.ts
src/test/: setup.ts  stub-match-media.ts
