[package]
name = "simple-archiver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
tokio = { version = "1", features = ["fs", "io-util"] }
walkdir = "2"
thiserror = "2"
loom = { version = "0.7", optional = true }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "2"
tempfile = "3"

[features]
loom = ["dep:loom"]

[lints.rust]
# Declare `loom` as a known cfg name so that `#[cfg(not(loom))]` does not
# trigger the `unexpected_cfgs` lint when clippy runs without RUSTFLAGS.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
