[package]
name = "simple-archiver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "sync"] }
tokio-util = "0.7.18"
walkdir = "2"
thiserror = "2"
loom = { version = "0.7", optional = true }
logos = "0.14"
lalrpop-util = "0.20"

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
zip = "2"
tempfile = "3"

[build-dependencies]
lalrpop = "0.20"

[package.metadata.cargo-machete]
# loom (optional dep) and mockall (dev dep) are pre-declared for PR5 — loom for
# concurrency model-checking, mockall for mocking the application ports — and are
# intentionally not referenced in code yet, so cargo-machete reports them as unused.
# Drop each from this list once the PR5 code actually uses it.
ignored = ["loom", "mockall"]

[features]
loom = ["dep:loom"]

[lints.rust]
# Declare `loom` as a known cfg name so that `#[cfg(not(loom))]` does not
# trigger the `unexpected_cfgs` lint when clippy runs without RUSTFLAGS.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
