[package]
name = "simple-archiver-core"
version = "0.11.0"
edition = "2021"

[dependencies]
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
chardetng = "0.1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "rt", "sync"] }
tokio-util = "0.7.18"
walkdir = "2"
thiserror = "2"
tempfile = "3"
unrar = "0.5"
loom = { version = "0.7", optional = true }
logos = "0.16"
lalrpop-util = "0.23"

[dev-dependencies]
mockall = "=0.14.0"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "time"] }
zip = "=8.6.0"

[build-dependencies]
lalrpop = "0.23"

[package.metadata.cargo-machete]
# mockall (dev dep) is pre-declared for PR5 to mock the application ports but is
# not referenced in code yet, so cargo-machete reports it as unused. Drop it from
# this list once the test code actually uses it.
ignored = ["mockall"]

[features]
loom = ["dep:loom"]

[lints.rust]
# Declare `loom` as a known cfg name so that `#[cfg(not(loom))]` does not
# trigger the `unexpected_cfgs` lint when clippy runs without RUSTFLAGS.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
